hphp/test/slow/traits/traits_and_interfaces3.php.expectf

Fatal error: Class C contains abstract method (blah) and must therefore be declared abstract or implement the remaining methods in %s on line 8
